                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-05-2006 added: you can now edit and remove customly added network locations in add source wizard.
 - 13-05-2006 changed: VoiceMasks.xml to System/ and KaiVectors.xml removed from CVS.
 - 13-05-2006 changed: don't show zoom overlay in slideshow when viewing comics.
 - 13-05-2006 fixed: [ 1483011 ] ControlListItem not able to display german umlaute
 - 13-05-2006 fixed: Keymap.xml - <Remote> Volume now works in VideoPlaylist/MusicPlayList & MyFiles. MoveItemUp(2), MoveItemDown(5). MyFiles : Highlight(1), Copy(4), Move(7).
 - 13-05-2006 fixed: Directorylisting in my music fileview was very slow because main thread wasn't leaving much cputime for the MusicInfoLoader. + very minor speedimprovement for imdb and allmusic lookups.
 - 13-05-2006 fixed: Scripts window would not show .py files.
 - 13-05-2006 changed: libcurl will now follow 2 redirects on connection
 - 13-05-2006 fixed: flv streams would start very slowly in dvd player due to it trying to find all streams before starting to play. 
                     (flv streams distributed with Content-Disposition will still fail used on some of google video's backup servers)
 - 13-05-2006 fixed: don't do tumbnail lookup on internet streams, slows startup
 - 13-05-2006 changed: samba now allows domain\user type usernames. smb://workgroup;domain\user@computer/share. 
                       workgroup is the workgroup of the computer (only needed for computername to ip lookup), domain is the logon domain of the user
 - 13-05-2006 fixed: files with short extensions could wrongfully get through directory masking.
 - 13-05-2006 added: wma codec to paplayer (builtin).